# Django-REST-celery-boilerplate

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  docker-compose-debug.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: format-and-lint.yml
backend/: manage.py
backend/server/: __init__.py  asgi.py  celery.py  gunicorn.conf.py  urls.py  wsgi.py
backend/server/settings/: base.py  local.py  prod.py  test.py
docker/backend/: Dockerfile  Dockerfile.prod  entrypoint.prod.sh  entrypoint.sh
docker/nginx/: Dockerfile  nginx.conf
example_app/: analysis.py  apps.py  consumers.py  models.py  routing.py  serializers.py  tasks.py  urls.py  views.py
example_app/management/commands/: download_models.py
example_app/migrations/: 0002_rename_polarity_analysis_confidence_score_and_more.py  0003_add_status_and_task_id.py
example_app/tests/: __init__.py  caching.py  test_consumer.py  test_tasks.py  views.py
scripts/: format.sh  init-letsencrypt.sh  lint.sh  test.sh
