[project]
name = "django-rest-boilerplate"
version = "0.1.0"
description = "An Asynchronous API using Django REST Application"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Xolani Mazibuko", email = "mazi76erx@gmail.com" }]

dependencies = [
    "django>=6.0.0",
    "djangorestframework>=3.16.1",
    "python-dotenv>=1.2.1",
    "psycopg2-binary>=2.9.11",
    "drf-yasg>=1.21.11",
    "adrf>=0.1.12",
    "redis>=7.1.0",
    "django-cors-headers>=4.9.0",
    "gunicorn>=23.0.0",
    "uvicorn>=0.38.0",
    "django-debug-toolbar>=6.1.0",
    # Channels
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.1.2",
    # Celery
    "celery>=5.6.0",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "flower>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "black>=25.12.0",
    "isort>=7.0.0",
    "ruff>=0.14.10",
    "django-stubs>=5.2.8",
    "djangorestframework-stubs>=3.16.6",
    "drf-yasg-stubs>=0.1.4",
    "pre-commit>=4.5.1",
    "celery-types>=0.24.0",
    "pytest-celery>=1.2.1",
]

[project.scripts]
manage = "backend.manage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

# Black configuration
[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hatch
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip = ["migrations", ".venv"]
known_django = ["django", "rest_framework", "channels", "celery"]
known_first_party = ["backend", "server", "example_app"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# Ruff configuration (replaces pylint for speed)
[tool.ruff]
target-version = "py314"
line-length = 88
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG001"]
"tasks.py" = ["ARG001"]

# MyPy configuration
[tool.mypy]
python_version = "3.14"
files = ["backend/server"]
ignore_missing_imports = true
allow_redefinition = true
disallow_untyped_decorators = false
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]
mypy_path = "backend/server"

[tool.django-stubs]
django_settings_module = "backend.server.settings.local"

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "server.settings.local"
python_files = ["test_*.py", "*_test.py"]
pythonpath = [".", "backend"]
addopts = [
    "--strict-markers",
    "-ra",
]
markers = [
    "integration: mark as integration test",
    "slow: marks tests as slow",
    "celery: marks tests that require celery",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
branch = true
source = ["backend"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"