[project]
name = "django-rest-boilerplate"
version = "0.1.0"
description = "An Asynchronous API using Django REST Application"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Xolani Mazibuko", email = "mazi76erx@gmail.com" }]

dependencies = [
    "django>=6.0.3",
    "djangorestframework>=3.16.1",
    "python-dotenv>=1.2.2",
    "psycopg2-binary>=2.9.11",
    "drf-yasg>=1.21.15",
    "adrf>=0.1.12",
    "redis>=7.2.1",
    "django-cors-headers>=4.9.0",
    "gunicorn>=25.1.0",
    "uvicorn>=0.41.0",
    "django-debug-toolbar>=6.2.0",
    # Channels
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    # Celery
    "celery>=5.6.2",
    "django-celery-beat>=2.9.0",
    "django-celery-results>=2.6.0",
    "flower>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
    "django-stubs>=5.2.9",
    "djangorestframework-stubs>=3.16.8",
    "drf-yasg-stubs>=0.1.4",
    "pre-commit>=4.5.1",
    "celery-types>=0.24.0",
    "types-redis>=4.6.0",
    "pytest-celery>=1.3.0",
]

[project.scripts]
manage = "backend.manage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

# Ruff configuration
[tool.ruff]
target-version = "py314"
line-length = 88
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by ruff format)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument
]

[tool.ruff.lint.isort]
known-first-party = ["backend", "server", "example_app"]
known-third-party = ["django", "rest_framework", "channels", "celery"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG001", "ARG002"]
"example_app/tests/__init__.py" = ["F403"]
"example_app/tests/analysis.py" = ["F821", "SIM117", "B017"]
"example_app/views.py" = ["ARG002"]
"example_app/consumers.py" = ["ARG002"]
"example_app/management/commands/*.py" = ["ARG002"]
"tasks.py" = ["ARG001"]
"backend/server/settings/*.py" = ["F403", "F405"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# MyPy configuration
[tool.mypy]
python_version = "3.14"
files = ["backend/server"]
ignore_missing_imports = true
allow_redefinition = true
disallow_untyped_decorators = false
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]
mypy_path = "backend"

[tool.django-stubs]
django_settings_module = "server.settings.local"

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "server.settings.local"
python_files = ["test_*.py", "*_test.py"]
pythonpath = [".", "backend"]
addopts = [
    "--strict-markers",
    "-ra",
]
markers = [
    "integration: mark as integration test",
    "slow: marks tests as slow",
    "celery: marks tests that require celery",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
branch = true
source = ["backend"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"